<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/films_navigation_icon"
        android:enabled="true"
        android:icon="@drawable/selector_navigation_films_icon"
        android:title="@string/films" />
    <item
        android:id="@+id/serials_navigation_icon"
        android:enabled="true"
        android:icon="@drawable/selector_navigation_serials_icon"
        android:title="@string/serials" />
    <item
        android:id="@+id/sport_navigation_icon"
        android:enabled="true"
        android:icon="@drawable/selector_navigation_sport_icon"
        android:title="@string/sport" />
    <item
        android:id="@+id/profile_navigation_icon"
        android:enabled="true"
        android:icon="@drawable/selector_navigation_profile_icon"
        android:title="@string/profile" />
</menu>