<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/png_profile_background"
    tools:context=".presentation.ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userInformation"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/png_profile_user_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            >

            <ImageView
                android:id="@+id/profile_sign_in_"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/sign_in_btn"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/visible_user_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="27dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toEndOf="@+id/image_keeper"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/m_plus_rounded_1c_bold"
                    android:text="John Doe"
                    android:textColor="@color/profile_white"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/userLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/m_plus_rounded_1c_bold"
                    android:text="johnme@gmail.com"
                    android:textColor="@color/profile_white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/userName" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/image_keeper"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="42dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                app:cardCornerRadius="360dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/userAvatar"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/svg_profile_avatar" />
            </androidx.cardview.widget.CardView>


            <ImageView
                android:id="@+id/change_user_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:elevation="100dp"
                android:src="@drawable/svh_edit_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/subscribeButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/profile_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInformation">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/m_plus_rounded_1c_bold"
            android:text="@string/subscribe"
            android:textColor="@color/profile_white"
            android:textSize="24sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/m_plus_rounded_1c_bold"
            android:text="@string/Subscription_Managment"
            android:textColor="@color/profile_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subscribeButton">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/aboutButton"
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/profile_button"
            app:layout_constraintStart_toEndOf="@+id/helpButton"
            app:layout_constraintTop_toBottomOf="@+id/playlistsButton">

            <ImageView
                android:id="@+id/aboutButtonIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@+id/aboutButtonText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/svg_profile_about" />

            <TextView
                android:id="@+id/aboutButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/About"
                android:textColor="@color/profile_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/helpButton"
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/profile_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/historyButton">

            <ImageView
                android:id="@+id/helpButtonIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@+id/helpButtonText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/svg_profile_help" />

            <TextView
                android:id="@+id/helpButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Help"
                android:textColor="@color/profile_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/historyButton"
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/profile_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsButton">

            <ImageView
                android:id="@+id/historyButtonIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@+id/historyButtonText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/svg_profile_history" />

            <TextView
                android:id="@+id/historyButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/History"
                android:textColor="@color/profile_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/settingsButton"
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:background="@drawable/profile_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/settingsButtonIcon"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@+id/settingsButtonText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/svg_profile_settings" />

            <TextView
                android:id="@+id/settingsButtonText"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginBottom="8dp"
                android:text="@string/Settings"
                android:textColor="@color/profile_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dowloadsButton"
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/profile_button"
            app:layout_constraintStart_toEndOf="@+id/settingsButton"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/downloadsButtonIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@+id/dowloadsButtonText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/svg_profile_downloads" />

            <TextView
                android:id="@+id/dowloadsButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Downloads"
                android:textColor="@color/profile_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/playlistsButton"
            android:layout_width="140dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/profile_button"
            app:layout_constraintStart_toEndOf="@+id/historyButton"
            app:layout_constraintTop_toBottomOf="@+id/dowloadsButton">

            <ImageView
                android:id="@+id/playlistsButtonIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@+id/playlistsButtonText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/svg_profile_playlists" />

            <TextView
                android:id="@+id/playlistsButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Playlists"
                android:textColor="@color/profile_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_profile"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@color/black"
        app:itemActiveIndicatorStyle="@style/ShapeAppearance.Material3.Corner.None"
        app:itemIconSize="22dp"
        app:itemIconTint="@color/bottom_nav_item_active_color"
        app:itemTextAppearanceActive="@android:color/white"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>